--- a/whisper-demo/notebook.ipynb
+++ b/whisper-demo/notebook.ipynb
@@ -1,28 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyPUl4hlWHvkn5GZusdDL9rr",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/bemxio/colab-notebooks/blob/main/whisper-demo/notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -30,38 +12,36 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Whisper"
-      ],
       "metadata": {
         "id": "HCBbRn9Xm2hA"
-      }
+      },
+      "source": [
+        "# Whisper"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "urEx82SUm_oE"
+      },
       "source": [
         "Whisper is a general-purpose speech recognition model, made by OpenAI. It is trained on a large dataset of diverse audio and is also a multitasking model that can perform multilingual speech recognition, speech translation, and language identification.\n",
         "\n",
         "And this is a Google Colab demo made for it, for fun."
-      ],
-      "metadata": {
-        "id": "urEx82SUm_oE"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#### Install required dependencies"
-      ],
       "metadata": {
         "id": "2GG1saQRmhOL"
-      }
+      },
+      "source": [
+        "#### Install required dependencies"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install git+https://github.com/openai/whisper.git"
-      ],
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -69,11 +49,10 @@
         "id": "O0w5O3P-m03u",
         "outputId": "587e2904-0425-4544-bc95-5e1b7c089897"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting git+https://github.com/openai/whisper.git\n",
             "  Cloning https://github.com/openai/whisper.git to /tmp/pip-req-build-9_lmei95\n",
@@ -117,32 +96,23 @@
             "Successfully installed openai-whisper-20230314 tiktoken-0.3.3\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install git+https://github.com/openai/whisper.git"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#### Set parameters for Whisper and upload the audio file"
-      ],
       "metadata": {
         "id": "d4OxH_g0n6Lf"
-      }
+      },
+      "source": [
+        "#### Set parameters for Whisper and upload the audio file"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from IPython.display import Audio\n",
-        "from google.colab import files\n",
-        "\n",
-        "model = \"large\" # @param [\"tiny.en\", \"tiny\", \"base.en\", \"base\", \"small.en\", \"small\", \"medium.en\", \"medium\", \"large-v1\", \"large-v2\", \"large\"]\n",
-        "language = \"English\" # @param [\"Afrikaans\", \"Albanian\", \"Amharic\", \"Arabic\", \"Armenian\", \"Assamese\", \"Azerbaijani\", \"Bashkir\", \"Basque\", \"Belarusian\", \"Bengali\", \"Bosnian\", \"Breton\", \"Bulgarian\", \"Burmese\", \"Castilian\", \"Catalan\", \"Chinese\", \"Croatian\", \"Czech\", \"Danish\", \"Dutch\", \"English\", \"Estonian\", \"Faroese\", \"Finnish\", \"Flemish\", \"French\", \"Galician\", \"Georgian\", \"German\", \"Greek\", \"Gujarati\", \"Haitian\", \"Haitian Creole\", \"Hausa\", \"Hawaiian\", \"Hebrew\", \"Hindi\", \"Hungarian\", \"Icelandic\", \"Indonesian\", \"Italian\", \"Japanese\", \"Javanese\", \"Kannada\", \"Kazakh\", \"Khmer\", \"Korean\", \"Lao\", \"Latin\", \"Latvian\", \"Letzeburgesch\", \"Lingala\", \"Lithuanian\", \"Luxembourgish\", \"Macedonian\", \"Malagasy\", \"Malay\", \"Malayalam\", \"Maltese\", \"Maori\", \"Marathi\", \"Moldavian\", \"Moldovan\", \"Mongolian\", \"Myanmar\", \"Nepali\", \"Norwegian\", \"Nynorsk\", \"Occitan\", \"Panjabi\", \"Pashto\", \"Persian\", \"Polish\", \"Portuguese\", \"Punjabi\", \"Pushto\", \"Romanian\", \"Russian\", \"Sanskrit\", \"Serbian\", \"Shona\", \"Sindhi\", \"Sinhala\", \"Sinhalese\", \"Slovak\", \"Slovenian\", \"Somali\", \"Spanish\", \"Sundanese\", \"Swahili\", \"Swedish\", \"Tagalog\", \"Tajik\", \"Tamil\", \"Tatar\", \"Telugu\", \"Thai\", \"Tibetan\", \"Turkish\", \"Turkmen\", \"Ukrainian\", \"Urdu\", \"Uzbek\", \"Valencian\", \"Vietnamese\", \"Welsh\", \"Yiddish\", \"Yoruba\"]\n",
-        "task = \"transcribe\" # @param [\"transcribe\", \"translate\"]\n",
-        "\n",
-        "files = files.upload()\n",
-        "name = list(files)[0]\n",
-        "\n",
-        "Audio(files[name])"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -151,14 +121,9 @@
         "id": "Aq0xxdUyo3oW",
         "outputId": "eae2372d-0c92-4d73-eaf7-83c3ea518ff6"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "     <input type=\"file\" id=\"files-f590565d-1c92-45fa-a51e-b9c0e3d9c07d\" name=\"files[]\" multiple disabled\n",
@@ -343,23 +308,23 @@
               "};\n",
               "})(self);\n",
               "</script> "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Saving SZ-M_9yu2XHO5Ch7.mp3 to SZ-M_9yu2XHO5Ch7.mp3\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "<IPython.lib.display.Audio object>"
-            ],
             "text/html": [
               "\n",
               "                <audio  controls=\"controls\" >\n",
@@ -367,27 +332,42 @@
               "                    Your browser does not support the audio element.\n",
               "                </audio>\n",
               "              "
+            ],
+            "text/plain": [
+              "<IPython.lib.display.Audio object>"
             ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 2
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "from IPython.display import Audio\n",
+        "from google.colab import files\n",
+        "\n",
+        "model = \"large\" # @param [\"tiny.en\", \"tiny\", \"base.en\", \"base\", \"small.en\", \"small\", \"medium.en\", \"medium\", \"large-v1\", \"large-v2\", \"large\"]\n",
+        "language = \"English\" # @param [\"Afrikaans\", \"Albanian\", \"Amharic\", \"Arabic\", \"Armenian\", \"Assamese\", \"Azerbaijani\", \"Bashkir\", \"Basque\", \"Belarusian\", \"Bengali\", \"Bosnian\", \"Breton\", \"Bulgarian\", \"Burmese\", \"Castilian\", \"Catalan\", \"Chinese\", \"Croatian\", \"Czech\", \"Danish\", \"Dutch\", \"English\", \"Estonian\", \"Faroese\", \"Finnish\", \"Flemish\", \"French\", \"Galician\", \"Georgian\", \"German\", \"Greek\", \"Gujarati\", \"Haitian\", \"Haitian Creole\", \"Hausa\", \"Hawaiian\", \"Hebrew\", \"Hindi\", \"Hungarian\", \"Icelandic\", \"Indonesian\", \"Italian\", \"Japanese\", \"Javanese\", \"Kannada\", \"Kazakh\", \"Khmer\", \"Korean\", \"Lao\", \"Latin\", \"Latvian\", \"Letzeburgesch\", \"Lingala\", \"Lithuanian\", \"Luxembourgish\", \"Macedonian\", \"Malagasy\", \"Malay\", \"Malayalam\", \"Maltese\", \"Maori\", \"Marathi\", \"Moldavian\", \"Moldovan\", \"Mongolian\", \"Myanmar\", \"Nepali\", \"Norwegian\", \"Nynorsk\", \"Occitan\", \"Panjabi\", \"Pashto\", \"Persian\", \"Polish\", \"Portuguese\", \"Punjabi\", \"Pushto\", \"Romanian\", \"Russian\", \"Sanskrit\", \"Serbian\", \"Shona\", \"Sindhi\", \"Sinhala\", \"Sinhalese\", \"Slovak\", \"Slovenian\", \"Somali\", \"Spanish\", \"Sundanese\", \"Swahili\", \"Swedish\", \"Tagalog\", \"Tajik\", \"Tamil\", \"Tatar\", \"Telugu\", \"Thai\", \"Tibetan\", \"Turkish\", \"Turkmen\", \"Ukrainian\", \"Urdu\", \"Uzbek\", \"Valencian\", \"Vietnamese\", \"Welsh\", \"Yiddish\", \"Yoruba\"]\n",
+        "task = \"transcribe\" # @param [\"transcribe\", \"translate\"]\n",
+        "\n",
+        "files = files.upload()\n",
+        "name = list(files)[0]\n",
+        "\n",
+        "Audio(files[name])"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#### Process the audio file with Whisper"
-      ],
       "metadata": {
         "id": "CMyU_35MwOjB"
-      }
+      },
+      "source": [
+        "#### Process the audio file with Whisper"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python3 -m whisper --model $model --language $language --task $task $name"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -395,29 +375,49 @@
         "id": "SEW9ofqGweRG",
         "outputId": "d5459971-480f-4e3a-84b2-e7f0c871e128"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "100%|█████████████████████████████████████| 2.87G/2.87G [00:52<00:00, 59.2MiB/s]\n",
             "[00:00.000 --> 00:06.320]  child porn should be legalized! child porn should be legalized! legalized child\n",
             "[00:06.320 --> 00:15.720]  porn! legalized child porn! legalized child porn! I love child pornography! it's awesome!\n"
           ]
         }
+      ],
+      "source": [
+        "!python3 -m whisper --model {model} --language {language} --task {task} \"{name}\""
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "E-yHzG0Fx6J7"
+      },
       "source": [
         "You can now access all of the files Whisper generated in the Files tab (that little folder on the left bar).\n",
         "\n",
         "Congratulations! Download stuff you need or generate more stuff if you want."
-      ],
-      "metadata": {
-        "id": "E-yHzG0Fx6J7"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "authorship_tag": "ABX9TyPUl4hlWHvkn5GZusdDL9rr",
+      "gpuType": "T4",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
