--- a/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
+++ b/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/bemxio/colab-notebooks/blob/main/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -76,7 +76,7 @@
         "\n",
         "# get the path of the video\n",
         "with open(\"filename.txt\", \"r\", encoding=\"utf-8\") as file:\n",
-        "    path = pathlib.Path(file.read())\n",
+        "    path = pathlib.Path(file.read().strip())\n",
         "\n",
         "# delete the filename file\n",
         "!rm filename.txt\n",
@@ -241,9 +241,9 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
+      "include_colab_link": true,
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
