add a --restrict-filenames flag to avoid issues

--- a/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
+++ b/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
@@ -72,7 +72,7 @@
         "URL = \"\" # @param {type: \"string\"}\n",
         "\n",
         "# download the video\n",
-        "!python3 -m yt_dlp --no-simulate --print-to-file \"%(title)s.%(ext)s\" filename.txt \"{URL}\" --output \"%(title)s.%(ext)s\"\n",
+        "!python3 -m yt_dlp --no-simulate --restrict-filenames --print-to-file \"%(title)s.%(ext)s\" filename.txt \"{URL}\" --output \"%(title)s.%(ext)s\"\n",
         "\n",
         "# get the path of the video\n",
         "with open(\"filename.txt\", \"r\", encoding=\"utf-8\") as file:\n",
