use IDs in downloaded videos instead

--- a/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
+++ b/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
@@ -72,7 +72,7 @@
         "URL = \"\" # @param {type: \"string\"}\n",
         "\n",
         "# download the video\n",
-        "!python3 -m yt_dlp --no-simulate --restrict-filenames --print-to-file \"%(title)s.%(ext)s\" filename.txt \"{URL}\" --output \"%(title)s.%(ext)s\"\n",
+        "!python3 -m yt_dlp --no-simulate --print-to-file \"%(id)s.%(ext)s\" filename.txt \"{URL}\" --output \"%(id)s.%(ext)s\"\n",
         "\n",
         "# get the path of the video\n",
         "with open(\"filename.txt\", \"r\", encoding=\"utf-8\") as file:\n",
@@ -82,10 +82,7 @@
         "!rm filename.txt\n",
         "\n",
         "# show a preview of the video\n",
-        "try:\n",
-        "    ipython_display(str(path))\n",
-        "except ValueError:\n",
-        "    print(\"The video file is too long to preview.\")"
+        "ipython_display(str(path), maxduration=300)"
       ]
     },
     {
@@ -197,10 +194,7 @@
         "audio.export(voiceover, format=\"wav\")\n",
         "\n",
         "# show a preview of the voice-over\n",
-        "try:\n",
-        "    ipython_display(str(voiceover))\n",
-        "except ValueError:\n",
-        "    print(\"The audio file is too long to preview.\")"
+        "ipython_display(str(voiceover), maxduration=300)"
       ]
     },
     {
@@ -226,14 +220,11 @@
         "# replace the audio track in the video file\n",
         "!ffmpeg -i \"{path}\" -i \"{voiceover}\" -c:v copy -map 0:v:0 -map 1:a:0 \"{output}\"\n",
         "\n",
-        "# show a preview of the video file\n",
-        "try:\n",
-        "    ipython_display(str(output))\n",
-        "except ValueError:\n",
-        "    print(\"The video file is too long to preview.\")\n",
-        "\n",
         "# download the video file\n",
-        "files.download(str(output))"
+        "files.download(str(output))\n",
+        "\n",
+        "# show a preview of the video file\n",
+        "ipython_display(str(output), maxduration=300)"
       ]
     }
   ],
