make the TLD customizable

--- a/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
+++ b/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
@@ -70,6 +70,7 @@
         "MODEL = \"large-v2\" # @param [\"tiny.en\", \"tiny\", \"base.en\", \"base\", \"small.en\", \"small\", \"medium.en\", \"medium\", \"large-v1\", \"large-v2\", \"large\"]\n",
         "LANGUAGE = \"Polish\" # @param [\"Afrikaans\", \"Albanian\", \"Amharic\", \"Arabic\", \"Armenian\", \"Assamese\", \"Azerbaijani\", \"Bashkir\", \"Basque\", \"Belarusian\", \"Bengali\", \"Bosnian\", \"Breton\", \"Bulgarian\", \"Burmese\", \"Castilian\", \"Catalan\", \"Chinese\", \"Croatian\", \"Czech\", \"Danish\", \"Dutch\", \"Estonian\", \"Faroese\", \"Finnish\", \"Flemish\", \"French\", \"Galician\", \"Georgian\", \"German\", \"Greek\", \"Gujarati\", \"Haitian\", \"Haitian Creole\", \"Hausa\", \"Hawaiian\", \"Hebrew\", \"Hindi\", \"Hungarian\", \"Icelandic\", \"Indonesian\", \"Italian\", \"Japanese\", \"Javanese\", \"Kannada\", \"Kazakh\", \"Khmer\", \"Korean\", \"Lao\", \"Latin\", \"Latvian\", \"Letzeburgesch\", \"Lingala\", \"Lithuanian\", \"Luxembourgish\", \"Macedonian\", \"Malagasy\", \"Malay\", \"Malayalam\", \"Maltese\", \"Maori\", \"Marathi\", \"Moldavian\", \"Moldovan\", \"Mongolian\", \"Myanmar\", \"Nepali\", \"Norwegian\", \"Nynorsk\", \"Occitan\", \"Panjabi\", \"Pashto\", \"Persian\", \"Polish\", \"Portuguese\", \"Punjabi\", \"Pushto\", \"Romanian\", \"Russian\", \"Sanskrit\", \"Serbian\", \"Shona\", \"Sindhi\", \"Sinhala\", \"Sinhalese\", \"Slovak\", \"Slovenian\", \"Somali\", \"Spanish\", \"Sundanese\", \"Swahili\", \"Swedish\", \"Tagalog\", \"Tajik\", \"Tamil\", \"Tatar\", \"Telugu\", \"Thai\", \"Tibetan\", \"Turkish\", \"Turkmen\", \"Ukrainian\", \"Urdu\", \"Uzbek\", \"Valencian\", \"Vietnamese\", \"Welsh\", \"Yiddish\", \"Yoruba\"]\n",
         "URL = \"\" # @param {type: \"string\"}\n",
+        "TLD = \"com\" # @param {type: \"string\"}\n",
         "\n",
         "# download the video\n",
         "!python3 -m yt_dlp --no-simulate --print-to-file \"%(id)s.%(ext)s\" filename.txt \"{URL}\" --output \"%(id)s.%(ext)s\"\n",
@@ -82,7 +83,7 @@
         "!rm filename.txt\n",
         "\n",
         "# show a preview of the video\n",
-        "ipython_display(str(path), maxduration=300)"
+        "ipython_display(str(path), filetype=\"video\", maxduration=300)"
       ]
     },
     {
@@ -194,7 +195,7 @@
         "audio.export(voiceover, format=\"wav\")\n",
         "\n",
         "# show a preview of the voice-over\n",
-        "ipython_display(str(voiceover), maxduration=300)"
+        "ipython_display(str(voiceover), filetype=\"audio\", maxduration=300)"
       ]
     },
     {
@@ -224,7 +225,7 @@
         "files.download(str(output))\n",
         "\n",
         "# show a preview of the video file\n",
-        "ipython_display(str(output), maxduration=300)"
+        "ipython_display(str(output), filetype=\"video\", maxduration=300)"
       ]
     }
   ],
