--- a/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
+++ b/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
@@ -69,8 +69,9 @@
         "# constants set by the user in the notebook\n",
         "MODEL = \"large-v2\" # @param [\"tiny.en\", \"tiny\", \"base.en\", \"base\", \"small.en\", \"small\", \"medium.en\", \"medium\", \"large-v1\", \"large-v2\", \"large\"]\n",
         "LANGUAGE = \"Polish\" # @param [\"Afrikaans\", \"Albanian\", \"Amharic\", \"Arabic\", \"Armenian\", \"Assamese\", \"Azerbaijani\", \"Bashkir\", \"Basque\", \"Belarusian\", \"Bengali\", \"Bosnian\", \"Breton\", \"Bulgarian\", \"Burmese\", \"Castilian\", \"Catalan\", \"Chinese\", \"Croatian\", \"Czech\", \"Danish\", \"Dutch\", \"Estonian\", \"Faroese\", \"Finnish\", \"Flemish\", \"French\", \"Galician\", \"Georgian\", \"German\", \"Greek\", \"Gujarati\", \"Haitian\", \"Haitian Creole\", \"Hausa\", \"Hawaiian\", \"Hebrew\", \"Hindi\", \"Hungarian\", \"Icelandic\", \"Indonesian\", \"Italian\", \"Japanese\", \"Javanese\", \"Kannada\", \"Kazakh\", \"Khmer\", \"Korean\", \"Lao\", \"Latin\", \"Latvian\", \"Letzeburgesch\", \"Lingala\", \"Lithuanian\", \"Luxembourgish\", \"Macedonian\", \"Malagasy\", \"Malay\", \"Malayalam\", \"Maltese\", \"Maori\", \"Marathi\", \"Moldavian\", \"Moldovan\", \"Mongolian\", \"Myanmar\", \"Nepali\", \"Norwegian\", \"Nynorsk\", \"Occitan\", \"Panjabi\", \"Pashto\", \"Persian\", \"Polish\", \"Portuguese\", \"Punjabi\", \"Pushto\", \"Romanian\", \"Russian\", \"Sanskrit\", \"Serbian\", \"Shona\", \"Sindhi\", \"Sinhala\", \"Sinhalese\", \"Slovak\", \"Slovenian\", \"Somali\", \"Spanish\", \"Sundanese\", \"Swahili\", \"Swedish\", \"Tagalog\", \"Tajik\", \"Tamil\", \"Tatar\", \"Telugu\", \"Thai\", \"Tibetan\", \"Turkish\", \"Turkmen\", \"Ukrainian\", \"Urdu\", \"Uzbek\", \"Valencian\", \"Vietnamese\", \"Welsh\", \"Yiddish\", \"Yoruba\"]\n",
-        "URL = \"\" # @param {type: \"string\"}\n",
-        "TLD = \"com\" # @param {type: \"string\"}\n",
+        "\n",
+        "SOURCE_URL = \"\" # @param {type: \"string\"}\n",
+        "GTTS_TLD = \"co.uk\" # @param {type: \"string\"}\n",
         "\n",
         "# download the video\n",
         "!python3 -m yt_dlp --no-simulate --print-to-file \"%(id)s.%(ext)s\" filename.txt \"{URL}\" --output \"%(id)s.%(ext)s\"\n",
@@ -162,7 +163,7 @@
         "        else:\n",
         "            stream = BytesIO()\n",
         "\n",
-        "            speech = gtts.gTTS(subtitle.content, lang=\"en\", tld=\"co.uk\", slow=True)\n",
+        "            speech = gtts.gTTS(subtitle.content, lang=\"en\", tld=GTTS_TLD, slow=True)\n",
         "            speech.write_to_fp(stream)\n",
         "\n",
         "            cache[subtitle.content] = stream\n",
