fix the URL variable name in the yt-dlp command

--- a/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
+++ b/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
@@ -74,7 +74,7 @@
         "GTTS_TLD = \"co.uk\" # @param {type: \"string\"}\n",
         "\n",
         "# download the video\n",
-        "!python3 -m yt_dlp --no-simulate --print-to-file \"%(id)s.%(ext)s\" filename.txt \"{URL}\" --output \"%(id)s.%(ext)s\"\n",
+        "!python3 -m yt_dlp --no-simulate --print-to-file \"%(id)s.%(ext)s\" filename.txt \"{SOURCE_URL}\" --output \"%(id)s.%(ext)s\"\n",
         "\n",
         "# get the path of the video\n",
         "with open(\"filename.txt\", \"r\", encoding=\"utf-8\") as file:\n",
