refactor some stuff + add the YT-DLP Whisper demo

--- a/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
+++ b/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
@@ -41,7 +41,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install yt_dlp openai-whisper srt gTTS pydub audio-effects"
+        "!pip install openai-whisper yt_dlp srt gTTS pydub audio-effects"
       ]
     },
     {
@@ -71,7 +71,7 @@
         "LANGUAGE = \"Polish\" # @param [\"Afrikaans\", \"Albanian\", \"Amharic\", \"Arabic\", \"Armenian\", \"Assamese\", \"Azerbaijani\", \"Bashkir\", \"Basque\", \"Belarusian\", \"Bengali\", \"Bosnian\", \"Breton\", \"Bulgarian\", \"Burmese\", \"Castilian\", \"Catalan\", \"Chinese\", \"Croatian\", \"Czech\", \"Danish\", \"Dutch\", \"Estonian\", \"Faroese\", \"Finnish\", \"Flemish\", \"French\", \"Galician\", \"Georgian\", \"German\", \"Greek\", \"Gujarati\", \"Haitian\", \"Haitian Creole\", \"Hausa\", \"Hawaiian\", \"Hebrew\", \"Hindi\", \"Hungarian\", \"Icelandic\", \"Indonesian\", \"Italian\", \"Japanese\", \"Javanese\", \"Kannada\", \"Kazakh\", \"Khmer\", \"Korean\", \"Lao\", \"Latin\", \"Latvian\", \"Letzeburgesch\", \"Lingala\", \"Lithuanian\", \"Luxembourgish\", \"Macedonian\", \"Malagasy\", \"Malay\", \"Malayalam\", \"Maltese\", \"Maori\", \"Marathi\", \"Moldavian\", \"Moldovan\", \"Mongolian\", \"Myanmar\", \"Nepali\", \"Norwegian\", \"Nynorsk\", \"Occitan\", \"Panjabi\", \"Pashto\", \"Persian\", \"Polish\", \"Portuguese\", \"Punjabi\", \"Pushto\", \"Romanian\", \"Russian\", \"Sanskrit\", \"Serbian\", \"Shona\", \"Sindhi\", \"Sinhala\", \"Sinhalese\", \"Slovak\", \"Slovenian\", \"Somali\", \"Spanish\", \"Sundanese\", \"Swahili\", \"Swedish\", \"Tagalog\", \"Tajik\", \"Tamil\", \"Tatar\", \"Telugu\", \"Thai\", \"Tibetan\", \"Turkish\", \"Turkmen\", \"Ukrainian\", \"Urdu\", \"Uzbek\", \"Valencian\", \"Vietnamese\", \"Welsh\", \"Yiddish\", \"Yoruba\"]\n",
         "\n",
         "SOURCE_URL = \"\" # @param {type: \"string\"}\n",
-        "GTTS_TLD = \"co.uk\" # @param {type: \"string\"}\n",
+        "TTS_REGION = \"co.uk\" # @param {type: \"string\"}\n",
         "\n",
         "# download the video\n",
         "!python3 -m yt_dlp --no-simulate --print-to-file \"%(id)s.%(ext)s\" filename.txt \"{SOURCE_URL}\" --output \"%(id)s.%(ext)s\"\n",
@@ -163,7 +163,7 @@
         "        else:\n",
         "            stream = BytesIO()\n",
         "\n",
-        "            speech = gtts.gTTS(subtitle.content, lang=\"en\", tld=GTTS_TLD, slow=True)\n",
+        "            speech = gtts.gTTS(subtitle.content, lang=\"en\", tld=TTS_REGION, slow=True)\n",
         "            speech.write_to_fp(stream)\n",
         "\n",
         "            cache[subtitle.content] = stream\n",
