use quotes for all variables

--- a/WhisperDemo/WhisperDemo.ipynb
+++ b/WhisperDemo/WhisperDemo.ipynb
@@ -117,7 +117,7 @@
       },
       "outputs": [],
       "source": [
-        "!python3 -m whisper --model {MODEL} --language {LANGUAGE} --task {TASK} \"{name}\""
+        "!python3 -m whisper --model \"{MODEL}\" --language \"{LANGUAGE}\" --task \"{TASK}\" \"{name}\""
       ]
     },
     {
