--- a/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
+++ b/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
@@ -104,7 +104,7 @@
       },
       "outputs": [],
       "source": [
-        "!python3 -m whisper --model {MODEL} --language {LANGUAGE} --task translate \"{path}\" --output_format srt"
+        "!python3 -m whisper --model \"{MODEL}\" --language \"{LANGUAGE}\" --task translate \"{path}\" --output_format srt"
       ]
     },
     {
