use a custom script instead of a CLI

--- a/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
+++ b/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
@@ -104,7 +104,40 @@
       },
       "outputs": [],
       "source": [
-        "!python3 -m whisper --model \"{MODEL}\" --language \"{LANGUAGE}\" --task translate \"{path}\" --output_format srt"
+        "import torch\n",
+        "\n",
+        "from whisper.transcribe import transcribe\n",
+        "from whisper.utils import get_writer\n",
+        "from whisper import load_model\n",
+        "\n",
+        "# other constants, if you really want to, you can edit them within the code\n",
+        "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "\n",
+        "TEMPERATURE = 0.0\n",
+        "BEAM_SIZE = 5\n",
+        "\n",
+        "OUTPUT_FORMAT = \"srt\"\n",
+        "\n",
+        "# load the model for audio processing and the writer for various formats\n",
+        "model = load_model(MODEL, device=DEVICE, download_root=None)\n",
+        "writer = get_writer(OUTPUT_FORMAT, output_dir=\".\")\n",
+        "\n",
+        "# get the transcription\n",
+        "result = transcribe(\n",
+        "    model=model, \n",
+        "    audio=str(path), \n",
+        "    \n",
+        "    verbose=True,\n",
+        "\n",
+        "    task=\"translate\",\n",
+        "    language=LANGUAGE,\n",
+        "\n",
+        "    temperature=TEMPERATURE,\n",
+        "    beam_size=BEAM_SIZE\n",
+        ")\n",
+        "\n",
+        "# write the result in the defined output format\n",
+        "writer(result, str(path), options={})"
       ]
     },
     {
