provide the required writer options

--- a/WhisperDemo/WhisperDemo.ipynb
+++ b/WhisperDemo/WhisperDemo.ipynb
@@ -150,7 +150,11 @@
         ")\n",
         "\n",
         "# write the result in the defined output format\n",
-        "writer(result, str(path), options={})"
+        "writer(result, str(path), options={\n",
+        "    \"highlight_words\": False,\n",
+        "    \"max_line_count\": None,\n",
+        "    \"max_line_width\": None\n",
+        "})"
       ]
     },
     {
