--- a/WhisperDemo/WhisperDemoYTDLP.ipynb
+++ b/WhisperDemo/WhisperDemoYTDLP.ipynb
@@ -156,7 +156,11 @@
         ")\n",
         "\n",
         "# write the result in the defined output format\n",
-        "writer(result, str(path), options={})"
+        "writer(result, str(path), options={\n",
+        "    \"highlight_words\": False,\n",
+        "    \"max_line_count\": None,\n",
+        "    \"max_line_width\": None\n",
+        "})"
       ]
     },
     {
