fix the missing yt-dlp dependency

--- a/JumpcutterDemo/JumpcutterDemo.ipynb
+++ b/JumpcutterDemo/JumpcutterDemo.ipynb
@@ -21,7 +21,7 @@
     "Jumpcutter is a program that is written in Python to automatically jump-cut silent parts of your videos. The purpose here is to ease your post recording work.\n",
     "\n",
     "And this is a Colab demo for it, made for fun, like with the Whisper [demo](https://colab.research.google.com/github/bemxio/colab-notebooks/blob/main/WhisperDemo/WhisperDemo.ipynb).<br/>\n",
-    "It's quite heavy on the RAM, so the GPU runtime is enough. "
+    "It's quite heavy on the RAM, so the CPU runtime is enough. "
    ]
   },
   {
