fix some more bugs

--- a/JumpcutterDemo/JumpcutterDemo.ipynb
+++ b/JumpcutterDemo/JumpcutterDemo.ipynb
@@ -93,10 +93,11 @@
     "output = path.with_stem(path.stem + \"_result\")\n",
     "\n",
     "# process the video through the jumpcutter\n",
-    "!python3 -m jumpcutter -c {CUT} -m {MAGNITUDE_THRESHOLD_RATIO} -d {DURATION_THRESHOLD} -f {FAILURE_TOLERANCE_RATIO} -s {SPACES_ON_EDGES} \"{path}\" -o \"{output}\"\n",
+    "!python3 -m jumpcutter -c {CUT} -m {MAGNITUDE_THRESHOLD_RATIO} -d {DURATION_THRESHOLD} -f {FAILURE_TOLERANCE_RATIO} -s {SPACES_ON_EDGES} -i \"{path}\" -o \"{output}\"\n",
     "\n",
     "# show a preview of the result\n",
-    "ipython_display(str(output), filetype=\"video\", maxduration=300)"
+    "if CUT != \"both\":\n",
+    "    ipython_display(str(output), filetype=\"video\", maxduration=300)"
    ]
   },
   {
