use the shell command for automatic voiceover as well

--- a/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
+++ b/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
@@ -67,7 +67,7 @@
         "from google.colab import files\n",
         "\n",
         "# constants set by the user in the notebook\n",
-        "MODEL = \"large-v2\" # @param [\"tiny.en\", \"tiny\", \"base.en\", \"base\", \"small.en\", \"small\", \"medium.en\", \"medium\", \"large-v1\", \"large-v2\", \"large\"]\n",
+        "MODEL = \"large\" # @param [\"tiny.en\", \"tiny\", \"base.en\", \"base\", \"small.en\", \"small\", \"medium.en\", \"medium\", \"large-v1\", \"large-v2\", \"large\"]\n",
         "LANGUAGE = \"Polish\" # @param [\"Afrikaans\", \"Albanian\", \"Amharic\", \"Arabic\", \"Armenian\", \"Assamese\", \"Azerbaijani\", \"Bashkir\", \"Basque\", \"Belarusian\", \"Bengali\", \"Bosnian\", \"Breton\", \"Bulgarian\", \"Burmese\", \"Castilian\", \"Catalan\", \"Chinese\", \"Croatian\", \"Czech\", \"Danish\", \"Dutch\", \"Estonian\", \"Faroese\", \"Finnish\", \"Flemish\", \"French\", \"Galician\", \"Georgian\", \"German\", \"Greek\", \"Gujarati\", \"Haitian\", \"Haitian Creole\", \"Hausa\", \"Hawaiian\", \"Hebrew\", \"Hindi\", \"Hungarian\", \"Icelandic\", \"Indonesian\", \"Italian\", \"Japanese\", \"Javanese\", \"Kannada\", \"Kazakh\", \"Khmer\", \"Korean\", \"Lao\", \"Latin\", \"Latvian\", \"Letzeburgesch\", \"Lingala\", \"Lithuanian\", \"Luxembourgish\", \"Macedonian\", \"Malagasy\", \"Malay\", \"Malayalam\", \"Maltese\", \"Maori\", \"Marathi\", \"Moldavian\", \"Moldovan\", \"Mongolian\", \"Myanmar\", \"Nepali\", \"Norwegian\", \"Nynorsk\", \"Occitan\", \"Panjabi\", \"Pashto\", \"Persian\", \"Polish\", \"Portuguese\", \"Punjabi\", \"Pushto\", \"Romanian\", \"Russian\", \"Sanskrit\", \"Serbian\", \"Shona\", \"Sindhi\", \"Sinhala\", \"Sinhalese\", \"Slovak\", \"Slovenian\", \"Somali\", \"Spanish\", \"Sundanese\", \"Swahili\", \"Swedish\", \"Tagalog\", \"Tajik\", \"Tamil\", \"Tatar\", \"Telugu\", \"Thai\", \"Tibetan\", \"Turkish\", \"Turkmen\", \"Ukrainian\", \"Urdu\", \"Uzbek\", \"Valencian\", \"Vietnamese\", \"Welsh\", \"Yiddish\", \"Yoruba\"]\n",
         "\n",
         "SOURCE_URL = \"\" # @param {type: \"string\"}\n",
@@ -104,44 +104,7 @@
       },
       "outputs": [],
       "source": [
-        "import torch\n",
-        "\n",
-        "from whisper.transcribe import transcribe\n",
-        "from whisper.utils import get_writer\n",
-        "from whisper import load_model\n",
-        "\n",
-        "# other constants, if you really want to, you can edit them within the code\n",
-        "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-        "\n",
-        "TEMPERATURE = 0.0\n",
-        "BEAM_SIZE = 5\n",
-        "\n",
-        "OUTPUT_FORMAT = \"srt\"\n",
-        "\n",
-        "# load the model for audio processing and the writer for various formats\n",
-        "model = load_model(MODEL, device=DEVICE, download_root=None)\n",
-        "writer = get_writer(OUTPUT_FORMAT, output_dir=\".\")\n",
-        "\n",
-        "# get the transcription\n",
-        "result = transcribe(\n",
-        "    model=model, \n",
-        "    audio=str(path), \n",
-        "    \n",
-        "    verbose=True,\n",
-        "\n",
-        "    task=\"translate\",\n",
-        "    language=LANGUAGE,\n",
-        "\n",
-        "    temperature=TEMPERATURE,\n",
-        "    beam_size=BEAM_SIZE\n",
-        ")\n",
-        "\n",
-        "# write the result in the defined output format\n",
-        "writer(result, str(path), options={\n",
-        "    \"highlight_words\": False,\n",
-        "    \"max_line_count\": None,\n",
-        "    \"max_line_width\": None\n",
-        "})"
+        "!python3 -m whisper {path} --model {MODEL} --language {LANGUAGE} --task translate"
       ]
     },
     {
