--- a/WhisperDemo/WhisperDemo.ipynb
+++ b/WhisperDemo/WhisperDemo.ipynb
@@ -117,7 +117,7 @@
       },
       "outputs": [],
       "source": [
-        "!python -m whisper {path} --model {MODEL} --language {LANGUAGE} --task {TASK}"
+        "!python3 -m whisper {path} --model {MODEL} --language {LANGUAGE} --task {TASK}"
       ]
     },
     {
