--- a/WhisperDemo/WhisperDemoYTDLP.ipynb
+++ b/WhisperDemo/WhisperDemoYTDLP.ipynb
@@ -123,7 +123,7 @@
       },
       "outputs": [],
       "source": [
-        "!python -m whisper {path} --model {MODEL} --language {LANGUAGE} --task {TASK}"
+        "!python3 -m whisper {path} --model {MODEL} --language {LANGUAGE} --task {TASK}"
       ]
     },
     {
