use "%pip" instead of "!pip"

--- a/AutomaticVoiceover/AutomaticVoiceover.ipynb
+++ b/AutomaticVoiceover/AutomaticVoiceover.ipynb
@@ -45,7 +45,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install openai-whisper srt gTTS pydub audio-effects"
+        "%pip install openai-whisper srt gTTS pydub audio-effects"
       ]
     },
     {
