--- a/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
+++ b/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
@@ -41,7 +41,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install openai-whisper yt_dlp srt gTTS pydub audio-effects"
+        "%pip install openai-whisper yt_dlp srt gTTS pydub audio-effects"
       ]
     },
     {
