--- a/JumpcutterDemo/JumpcutterDemoYTDLP.ipynb
+++ b/JumpcutterDemo/JumpcutterDemoYTDLP.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install jumpcutter yt-dlp"
+    "%pip install jumpcutter yt-dlp"
    ]
   },
   {
