--- a/WhisperDemo/WhisperDemo.ipynb
+++ b/WhisperDemo/WhisperDemo.ipynb
@@ -51,7 +51,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install openai-whisper"
+        "%pip install openai-whisper"
       ]
     },
     {
