--- a/JumpcutterDemo/JumpcutterDemo.ipynb
+++ b/JumpcutterDemo/JumpcutterDemo.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install jumpcutter"
+    "%pip install jumpcutter"
    ]
   },
   {
