--- a/WhisperDemo/WhisperDemoYTDLP.ipynb
+++ b/WhisperDemo/WhisperDemoYTDLP.ipynb
@@ -51,7 +51,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install openai-whisper yt-dlp"
+        "%pip install openai-whisper yt-dlp"
       ]
     },
     {
