fix paths with spaces not working

--- a/AutomaticVoiceover/AutomaticVoiceover.ipynb
+++ b/AutomaticVoiceover/AutomaticVoiceover.ipynb
@@ -113,7 +113,7 @@
       },
       "outputs": [],
       "source": [
-        "!python3 -m whisper {path} --model {MODEL} --language {LANGUAGE} --task translate"
+        "!python3 -m whisper \"{path}\" --model {MODEL} --language {LANGUAGE} --task translate"
       ]
     },
     {
