--- a/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
+++ b/AutomaticVoiceover/AutomaticVoiceoverYTDLP.ipynb
@@ -76,7 +76,7 @@
         "TTS_REGION = \"co.uk\" # @param {type: \"string\"}\n",
         "\n",
         "# download the video\n",
-        "!python3 -m yt_dlp --no-simulate --print-to-file \"%(id)s.%(ext)s\" filename.txt \"{SOURCE_URL}\" --output \"%(id)s.%(ext)s\"\n",
+        "!python3 -m yt_dlp --no-simulate --print-to-file \"%(title)s.%(ext)s\" filename.txt \"{SOURCE_URL}\" --output \"%(title)s.%(ext)s\"\n",
         "\n",
         "# get the path of the video\n",
         "with open(\"filename.txt\", \"r\", encoding=\"utf-8\") as file:\n",
@@ -106,7 +106,7 @@
       },
       "outputs": [],
       "source": [
-        "!python3 -m whisper {path} --model {MODEL} --language {LANGUAGE} --task translate"
+        "!python3 -m whisper \"{path}\" --model {MODEL} --language {LANGUAGE} --task translate"
       ]
     },
     {
