--- a/JumpcutterDemo/JumpcutterDemoYTDLP.ipynb
+++ b/JumpcutterDemo/JumpcutterDemoYTDLP.ipynb
@@ -68,7 +68,7 @@
     "SPACES_ON_EDGES = 0.1 # @param {type: \"slider\", min: 0, max: 1, step: 0.01}\n",
     "\n",
     "# download the video\n",
-    "!python3 -m yt_dlp --no-simulate --print-to-file \"%(id)s.%(ext)s\" filename.txt \"{SOURCE_URL}\" --output \"%(id)s.%(ext)s\"\n",
+    "!python3 -m yt_dlp --no-simulate --print-to-file \"%(title)s.%(ext)s\" filename.txt \"{SOURCE_URL}\" --output \"%(title)s.%(ext)s\"\n",
     "\n",
     "# get the path of the video\n",
     "with open(\"filename.txt\", \"r\", encoding=\"utf-8\") as file:\n",
