--- a/WhisperDemo/WhisperDemoYTDLP.ipynb
+++ b/WhisperDemo/WhisperDemoYTDLP.ipynb
@@ -89,7 +89,7 @@
         "TASK = \"transcribe\" # @param [\"transcribe\", \"translate\"]\n",
         "\n",
         "# download the video\n",
-        "!python3 -m yt_dlp --no-simulate --print-to-file \"%(id)s.%(ext)s\" filename.txt \"{SOURCE_URL}\" --output \"%(id)s.%(ext)s\"\n",
+        "!python3 -m yt_dlp --no-simulate --print-to-file \"%(title)s.%(ext)s\" filename.txt \"{SOURCE_URL}\" --output \"%(title)s.%(ext)s\"\n",
         "\n",
         "# get the path of the video\n",
         "with open(\"filename.txt\", \"r\", encoding=\"utf-8\") as file:\n",
@@ -123,7 +123,7 @@
       },
       "outputs": [],
       "source": [
-        "!python3 -m whisper {path} --model {MODEL} --language {LANGUAGE} --task {TASK}"
+        "!python3 -m whisper \"{path}\" --model {MODEL} --language {LANGUAGE} --task {TASK}"
       ]
     },
     {
