strip the segment text and print the segment in a nicer format in FasterWhisperDemo

--- a/FasterWhisperDemo/FasterWhisperDemo.ipynb
+++ b/FasterWhisperDemo/FasterWhisperDemo.ipynb
@@ -127,29 +127,33 @@
         "# initialize neccecary variables\n",
         "model = WhisperModel(MODEL, device=\"cuda\", compute_type=\"float16\")\n",
         "subtitles = []\n",
-        "text = \"\"\n",
+        "transcription = \"\"\n",
         "\n",
         "# initialize the transcription generator\n",
         "segments, _ = model.transcribe(path, language=LANGUAGE, task=TASK)\n",
         "\n",
         "# transcribe the audio\n",
         "for index, segment in enumerate(segments):\n",
-        "    print(\"[%.2fs -> %.2fs] %s\" % (segment.start, segment.end, segment.text))\n",
+        "    start = timedelta(seconds=segment.start)\n",
+        "    end = timedelta(seconds=segment.end)\n",
+        "    text = segment.text.strip()\n",
+        "\n",
+        "    print(f\"[{start} --> {end}] {text}\")\n",
         "\n",
         "    subtitles.append(srt.Subtitle(\n",
         "        index=index + 1,\n",
-        "        start=timedelta(seconds=segment.start),\n",
-        "        end=timedelta(seconds=segment.end),\n",
-        "        content=segment.text\n",
+        "        start=start,\n",
+        "        end=end,\n",
+        "        content=text\n",
         "    ))\n",
-        "    text += segment.text + \"\\n\"\n",
+        "    transcription += text + \"\\n\"\n",
         "\n",
-        "# save the subtitles and the text to seperate files\n",
+        "# save the subtitles and the transcription to seperate files\n",
         "with open(path.with_suffix(\".srt\"), \"w\") as file:\n",
         "    file.write(srt.compose(subtitles))\n",
         "\n",
         "with open(path.with_suffix(\".txt\"), \"w\") as file:\n",
-        "    file.write(text)"
+        "    file.write(transcription)"
       ]
     },
     {
